# RESTful-API

./: README.md
RESTful_API/: pyproject.toml
RESTful_API/restful_api/: main.py
RESTful_API/restful_api/dependency/: database.py
RESTful_API/restful_api/routers/: employees.py
RESTful_API/restful_api/schema/: user.py
